# rayTracer

./: .gitignore  README.md  cachegrind.out.40032  callgrind.out.35601  callgrind.out.57348  callgrind35601.txt  rtcamera.py  rtmain.py  rtscene.py  rtsimdataloader.py  rtsimdataloader_new.py  rttests.py  sphere_gmsh_vtk_test_2d_manyelems.vtk  test_nano.ppm  vpython3.supp
cpp/: CMakeLists.txt  access_test.cpp  access_test.h  ndarray.c  ndarray.h  rtbvh.cpp  rtbvh.h  rtbvh_recursion.cpp  rtbvh_recursion.h  rtbvh_stack.cpp  rtbvh_stack.h  rteigentypes.h  rthitrecord.h  rtmain.cpp  rtmathutils.h  rtray.h  rtrayintersection.cpp  rtrayintersection.h  rtrender.cpp  rtrender.h
images/: ex_render_1.ppm  ex_render_2.ppm
